add sparse config

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "file": "as_graph.txt",
-    "representation": "list",
+    "representation": "matriz",
+    "sparse": false,
     "search_type": "wide",
     "infos" : {
         "output": "testse.txt"   
